# test_ogre_next

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMake/: Bootstrap.cmake  iOS.cmake
CMake/Dependencies/: OGRE.cmake
CMake/Templates/: Plugins.cfg.in
include/: CityProjectGameState.h  EmptyProjectGameState.h  custom_game_state.h  graphics_game_state.h  logic_game_state.h
src/: CityProject.cpp  CityProjectGameState.cpp  EmptyProject.cpp  EmptyProjectGameState.cpp  custom_game_state.cpp  graphics_game_state.cpp  logic_game_state.cpp  tutorial.cpp  tutorial_project.cpp
template/: config.h.in
